# stemmers

./: .rubocop.yml  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  stemmers.gemspec
ext/stemmers/: Cargo.toml  extconf.rb
ext/stemmers/src/: lib.rs
lib/: stemmers.rb
lib/stemmers/: version.rb
lib/stemmers/stopwords/: af.json  ar.json  bg.json  br.json  ca.json  cs.json  da.json  el.json  en.json  eo.json  et.json  eu.json  fa.json  fi.json  fr.json  ga.json  gl.json  gu.json  ha.json  he.json  hi.json  hr.json  hu.json  hy.json  id.json  it.json  ja.json  ko.json  ku.json  la.json  lt.json  lv.json  mr.json  ms.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  (+15 more)
sig/: stemmers.rbs
test/: stemmers_test.rb  test_helper.rb
