[package]
name = "stemmers"
version = "0.1.0"
edition = "2021"
authors = ["Nando Vieira <me@fnando.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lingua = { version = "1.7.1", default-features = false, features = ["arabic", "danish", "german", "greek", "english", "spanish", "finnish", "french", "hungarian", "italian", "dutch", "portuguese", "romanian", "russian", "swedish", "tamil", "turkish"] }
magnus = { version = "0.6.2" }
rust-stemmers = "1.2.0"
